src/Skia/Bindings/Sk_imagefilter.hs


@
sk_imagefilter_t *sk_imagefilter_new_magnifier(const sk_rect_t *lensBounds, float zoomAmount, float inset, const sk_sampling_options_t *sampling, const sk_imagefilter_t *input, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_magnifier" sk_imagefilter_new_magnifier ::
  Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * lensBounds"@
  -> CFloat -- ^ C argument @"float zoomAmount"@
  -> CFloat -- ^ C argument @"float inset"@
  -> Ptr (Sk_sampling_options) -- ^ C argument @"const sk_sampling_options_t * sampling"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * input"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_magnifier'
foreign import ccall "&sk_imagefilter_new_magnifier" p'sk_imagefilter_new_magnifier ::
  FunPtr (Ptr (Sk_rect) -> CFloat -> CFloat -> Ptr (Sk_sampling_options) -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_matrix_convolution(const sk_isize_t *kernelSize, const float kernel[], float gain, float bias, const sk_ipoint_t *kernelOffset, sk_shader_tilemode_t ctileMode, _Bool convolveAlpha, const sk_imagefilter_t *input, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_matrix_convolution" sk_imagefilter_new_matrix_convolution ::
  Ptr (Sk_isize) -- ^ C argument @"const sk_isize_t * kernelSize"@
  -> Ptr (CFloat) -- ^ C argument @"const float [] kernel"@
  -> CFloat -- ^ C argument @"float gain"@
  -> CFloat -- ^ C argument @"float bias"@
  -> Ptr (Sk_ipoint) -- ^ C argument @"const sk_ipoint_t * kernelOffset"@
  -> Sk_shader_tilemode -- ^ C argument @"sk_shader_tilemode_t ctileMode"@
  -> CBool -- ^ C argument @"_Bool convolveAlpha"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * input"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_matrix_convolution'
foreign import ccall "&sk_imagefilter_new_matrix_convolution" p'sk_imagefilter_new_matrix_convolution ::
  FunPtr (Ptr (Sk_isize) -> Ptr (CFloat) -> CFloat -> CFloat -> Ptr (Sk_ipoint) -> Sk_shader_tilemode -> CBool -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_matrix_transform(const sk_matrix_t *cmatrix, const sk_sampling_options_t *sampling, const sk_imagefilter_t *input)
@
-}
foreign import ccall "sk_imagefilter_new_matrix_transform" sk_imagefilter_new_matrix_transform ::
  Ptr (Sk_matrix) -- ^ C argument @"const sk_matrix_t * cmatrix"@
  -> Ptr (Sk_sampling_options) -- ^ C argument @"const sk_sampling_options_t * sampling"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * input"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_matrix_transform'
foreign import ccall "&sk_imagefilter_new_matrix_transform" p'sk_imagefilter_new_matrix_transform ::
  FunPtr (Ptr (Sk_matrix) -> Ptr (Sk_sampling_options) -> Ptr (Sk_imagefilter) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_merge(const sk_imagefilter_t *cfilters[], int count, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_merge" sk_imagefilter_new_merge ::
  Ptr (Ptr (Sk_imagefilter)) -- ^ C argument @"const sk_imagefilter_t *[] cfilters"@
  -> CInt -- ^ C argument @"int count"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_merge'
foreign import ccall "&sk_imagefilter_new_merge" p'sk_imagefilter_new_merge ::
  FunPtr (Ptr (Ptr (Sk_imagefilter)) -> CInt -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_merge_simple(const sk_imagefilter_t *first, const sk_imagefilter_t *second, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_merge_simple" sk_imagefilter_new_merge_simple ::
  Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * first"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * second"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_merge_simple'
foreign import ccall "&sk_imagefilter_new_merge_simple" p'sk_imagefilter_new_merge_simple ::
  FunPtr (Ptr (Sk_imagefilter) -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_offset(float dx, float dy, const sk_imagefilter_t *input, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_offset" sk_imagefilter_new_offset ::
  CFloat -- ^ C argument @"float dx"@
  -> CFloat -- ^ C argument @"float dy"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * input"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_offset'
foreign import ccall "&sk_imagefilter_new_offset" p'sk_imagefilter_new_offset ::
  FunPtr (CFloat -> CFloat -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_picture(const sk_picture_t *picture)
@
-}
foreign import ccall "sk_imagefilter_new_picture" sk_imagefilter_new_picture ::
  Ptr (Sk_picture) -- ^ C argument @"const sk_picture_t * picture"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_picture'
foreign import ccall "&sk_imagefilter_new_picture" p'sk_imagefilter_new_picture ::
  FunPtr (Ptr (Sk_picture) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_picture_with_rect(const sk_picture_t *picture, const sk_rect_t *targetRect)
@
-}
foreign import ccall "sk_imagefilter_new_picture_with_rect" sk_imagefilter_new_picture_with_rect ::
  Ptr (Sk_picture) -- ^ C argument @"const sk_picture_t * picture"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * targetRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_picture_with_rect'
foreign import ccall "&sk_imagefilter_new_picture_with_rect" p'sk_imagefilter_new_picture_with_rect ::
  FunPtr (Ptr (Sk_picture) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_shader(const sk_shader_t *shader, _Bool dither, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_shader" sk_imagefilter_new_shader ::
  Ptr (Sk_shader) -- ^ C argument @"const sk_shader_t * shader"@
  -> CBool -- ^ C argument @"_Bool dither"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_shader'
foreign import ccall "&sk_imagefilter_new_shader" p'sk_imagefilter_new_shader ::
  FunPtr (Ptr (Sk_shader) -> CBool -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_tile(const sk_rect_t *src, const sk_rect_t *dst, const sk_imagefilter_t *input)
@
-}
foreign import ccall "sk_imagefilter_new_tile" sk_imagefilter_new_tile ::
  Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * src"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * dst"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * input"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_tile'
foreign import ccall "&sk_imagefilter_new_tile" p'sk_imagefilter_new_tile ::
  FunPtr (Ptr (Sk_rect) -> Ptr (Sk_rect) -> Ptr (Sk_imagefilter) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_dilate(float radiusX, float radiusY, const sk_imagefilter_t *input, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_dilate" sk_imagefilter_new_dilate ::
  CFloat -- ^ C argument @"float radiusX"@
  -> CFloat -- ^ C argument @"float radiusY"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * input"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_dilate'
foreign import ccall "&sk_imagefilter_new_dilate" p'sk_imagefilter_new_dilate ::
  FunPtr (CFloat -> CFloat -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_erode(float radiusX, float radiusY, const sk_imagefilter_t *input, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_erode" sk_imagefilter_new_erode ::
  CFloat -- ^ C argument @"float radiusX"@
  -> CFloat -- ^ C argument @"float radiusY"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * input"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_erode'
foreign import ccall "&sk_imagefilter_new_erode" p'sk_imagefilter_new_erode ::
  FunPtr (CFloat -> CFloat -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_distant_lit_diffuse(const sk_point3_t *direction, sk_color_t lightColor, float surfaceScale, float kd, const sk_imagefilter_t *input, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_distant_lit_diffuse" sk_imagefilter_new_distant_lit_diffuse ::
  Ptr (Sk_point3) -- ^ C argument @"const sk_point3_t * direction"@
  -> Sk_color -- ^ C argument @"sk_color_t lightColor"@
  -> CFloat -- ^ C argument @"float surfaceScale"@
  -> CFloat -- ^ C argument @"float kd"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * input"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_distant_lit_diffuse'
foreign import ccall "&sk_imagefilter_new_distant_lit_diffuse" p'sk_imagefilter_new_distant_lit_diffuse ::
  FunPtr (Ptr (Sk_point3) -> Sk_color -> CFloat -> CFloat -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_point_lit_diffuse(const sk_point3_t *location, sk_color_t lightColor, float surfaceScale, float kd, const sk_imagefilter_t *input, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_point_lit_diffuse" sk_imagefilter_new_point_lit_diffuse ::
  Ptr (Sk_point3) -- ^ C argument @"const sk_point3_t * location"@
  -> Sk_color -- ^ C argument @"sk_color_t lightColor"@
  -> CFloat -- ^ C argument @"float surfaceScale"@
  -> CFloat -- ^ C argument @"float kd"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * input"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_point_lit_diffuse'
foreign import ccall "&sk_imagefilter_new_point_lit_diffuse" p'sk_imagefilter_new_point_lit_diffuse ::
  FunPtr (Ptr (Sk_point3) -> Sk_color -> CFloat -> CFloat -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:
